# floaty_agents

./: .gitignore  LICENSE  README.md  floaty  pyproject.toml
scripts/: install-autostart.sh  install-user-command.sh
src/floaty_agents/: cli.py  config.py
